--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>Golf Atlas Map</title>
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Leaflet + Cluster -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -11,140 +11,246 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
 
 <style>
-html,body,#map{height:100%;margin:0;background:#052D1F;}
-/* Cluster “golf-ball” style */
-.marker-cluster-small,.marker-cluster-medium,.marker-cluster-large{
-  background:radial-gradient(circle at 30% 35%,#fafafa 10%,#ddd 60%,#bbb 90%);
-  border:2px solid #222;
-  border-radius:50%;
-  color:#111;
-  font-weight:700;
-  text-shadow:0 1px 0 rgba(255,255,255,0.6);
-}
-/* Popup styling */
-.leaflet-popup-content-wrapper{
-  background:#052D1F;
-  color:#f2f6f3;
-  border:1px solid rgba(255,255,255,0.08);
-  box-shadow:0 12px 28px rgba(0,0,0,0.55);
-  border-radius:16px;
-}
-.leaflet-popup-tip{background:#052D1F;}
-.popup{font-family:"Inter",-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;min-width:260px;max-width:360px;}
-.popup .header{display:flex;gap:10px;align-items:center;margin:4px 0 8px;}
-.popup .title{font-weight:700;font-size:1.05rem;line-height:1.2;}
-.popup .meta{opacity:.95;font-size:.9rem;}
-.popup .row{display:grid;grid-template-columns:1fr 1fr;gap:8px;margin-top:8px;font-size:.9rem;}
-.popup .pill{background:rgba(255,255,255,0.08);border:1px solid rgba(255,255,255,0.1);padding:6px 10px;border-radius:999px;text-align:center;white-space:nowrap;}
-.popup .actions{margin-top:12px;display:flex;justify-content:flex-end;}
-.popup .btn{padding:8px 12px;border-radius:10px;border:1px solid rgba(255,255,255,0.15);background:#083424;color:#fff;text-decoration:none;font-weight:600;}
-.popup .btn:hover{filter:brightness(1.1);}
+  html, body, #map { height: 100%; margin: 0; background: #052D1F; }
 
-/* Gold Top-100 badge */
-.badge-top100{
-  --g1:#f7d776;--g2:#dcb247;--g3:#b9902d;
-  display:inline-flex;align-items:center;gap:6px;
-  padding:6px 10px;border-radius:999px;
-  background:linear-gradient(145deg,var(--g1),var(--g2) 55%,var(--g3));
-  color:#111;font-weight:800;letter-spacing:.2px;line-height:1;
-  box-shadow:0 0 0 1px rgba(255,255,255,.25) inset,0 2px 6px rgba(0,0,0,.4);
-}
-.badge-top100 .rank{font-size:.95rem;padding:3px 6px;border-radius:6px;background:rgba(255,255,255,.4);}
-.badge-top100 .label{font-size:.8rem;font-weight:900;text-transform:uppercase;}
+  /* ===== Golf-ball cluster icons ===== */
+  .marker-cluster {
+    border-radius: 50%;
+    box-shadow: 0 6px 14px rgba(0,0,0,0.35);
+  }
+  .marker-cluster div {
+    width: 46px; height: 46px; border-radius: 50%;
+    position: relative; display: grid; place-items: center;
+    border: 2px solid #222;
+    background:
+      radial-gradient(circle at 30% 30%, #fff, #f1f1f1 45%, #e0e0e0 70%, #cfcfcf 100%),
+      repeating-radial-gradient(circle at 35% 35%, rgba(0,0,0,0.06) 0 2px, transparent 2px 6px);
+  }
+  .marker-cluster span {
+    color: #111; font: 700 14px/1.2 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.7);
+    filter: drop-shadow(0 1px 0 rgba(255,255,255,0.5));
+  }
+  .marker-cluster-small div { width: 40px; height: 40px; }
+  .marker-cluster-medium div { width: 48px; height: 48px; }
+  .marker-cluster-large div { width: 56px; height: 56px; }
 
-/* Tooltips */
-.ga-tooltip{background:#083424;color:#f1f6f3;border:1px solid rgba(255,255,255,0.15);
-border-radius:8px;box-shadow:0 8px 18px rgba(0,0,0,.45);padding:6px 8px;font-weight:700;}
-.leaflet-marker-icon{transition:transform .12s ease,filter .12s ease;}
-.leaflet-marker-icon:hover{transform:scale(1.06);filter:drop-shadow(0 6px 12px rgba(0,0,0,.45));}
+  /* ===== Popup styling (forest green) ===== */
+  .leaflet-popup-content-wrapper {
+    background: #052D1F; color: #f2f6f3;
+    border: 1px solid rgba(255,255,255,0.08);
+    box-shadow: 0 12px 28px rgba(0,0,0,0.55);
+    border-radius: 16px;
+  }
+  .leaflet-popup-tip { background: #052D1F; }
+  .popup {
+    font-family: "Inter", -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+    min-width: 260px; max-width: 380px;
+  }
+  .popup .header { display: flex; gap: 10px; align-items: center; margin: 4px 0 10px; }
+  .popup .title { font-weight: 800; font-size: 1.08rem; line-height: 1.2; letter-spacing: .2px; }
+  .popup .line { margin: 6px 0; font-size: 0.95rem; }
+  .muted { opacity: .95; }
+  .row {
+    display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-top: 8px; font-size: .92rem;
+  }
+  .pill {
+    background: rgba(255,255,255,0.08); border: 1px solid rgba(255,255,255,0.12);
+    padding: 6px 10px; border-radius: 999px; text-align: center; white-space: nowrap;
+  }
+  .actions { margin-top: 12px; display: flex; justify-content: flex-end; }
+  .btn {
+    padding: 8px 12px; border-radius: 10px;
+    border: 1px solid rgba(255,255,255,0.15);
+    background: #083424; color: #fff; text-decoration: none; font-weight: 700;
+  }
+  .btn:hover { filter: brightness(1.08); }
+
+  /* ===== Gold Top-100 Badge ===== */
+  .badge-top100 {
+    --g1:#f7d776; --g2:#dcb247; --g3:#b9902d;
+    display:inline-flex; align-items:center; gap:6px;
+    padding:6px 10px; border-radius:999px;
+    background:linear-gradient(145deg,var(--g1),var(--g2) 55%,var(--g3));
+    color:#111; font-weight:800; letter-spacing:.2px; line-height:1;
+    box-shadow:0 0 0 1px rgba(255,255,255,.25) inset, 0 2px 6px rgba(0,0,0,.4);
+  }
+  .badge-top100 .rank {
+    font-size:.95rem; padding:3px 6px; border-radius:6px; background:rgba(255,255,255,.4);
+  }
+  .badge-top100 .label { font-size:.8rem; font-weight:900; text-transform:uppercase; }
+
+  /* ===== Hover tooltips ===== */
+  .ga-tooltip {
+    background:#083424; color:#f1f6f3;
+    border:1px solid rgba(255,255,255,0.15); border-radius:8px;
+    box-shadow:0 8px 18px rgba(0,0,0,.45);
+    padding:6px 8px; font-weight:700; letter-spacing:.1px;
+  }
+  .leaflet-marker-icon { transition: transform .12s ease, filter .12s ease; }
+  .leaflet-marker-icon:hover { transform: scale(1.06); filter: drop-shadow(0 6px 12px rgba(0,0,0,.45)); }
 </style>
 </head>
 <body>
 <div id="map"></div>
 
+<!-- libs -->
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
 
 <script>
-// ===== CONFIG =====
-const params=new URLSearchParams(window.location.search);
-const CSV_URL=params.get("csv")||"https://docs.google.com/spreadsheets/d/e/2PACX-1vT-nZvG7m9sUkOu0spxVTVGcM311qlgGSjnFgRDQr-l6nfs1cPFNrGBXO0ZDzMIQg/pub?gid=1171293634&single=true&output=csv";
-const START_VIEW={center:[39.5,-98.5],zoom:4};
+  // ===== CONFIG =====
+  const params = new URLSearchParams(window.location.search);
+  const CSV_URL = params.get("csv") || "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-nZvG7m9sUkOu0spxVTVGcM311qlgGSjnFgRDQr-l6nfs1cPFNrGBXO0ZDzMIQg/pub?gid=1171293634&single=true&output=csv";
+  const START_VIEW = { center: [39.5, -98.5], zoom: 4 };
 
-// --- Map base ---
-const map=L.map("map",{zoomControl:true,attributionControl:false}).setView(START_VIEW.center,START_VIEW.zoom);
-L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",{maxZoom:18}).addTo(map);
+  // Map
+  const map = L.map("map", { zoomControl: true, attributionControl: false })
+    .setView(START_VIEW.center, START_VIEW.zoom);
+  L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", { maxZoom: 18 }).addTo(map);
 
-// --- Cluster group (golf ball style) ---
-const clusters=L.markerClusterGroup({
-  iconCreateFunction:function(cluster){
-    const count=cluster.getChildCount();
-    const size=count<10?"small":count<50?"medium":"large";
-    return L.divIcon({html:`<div><span>${count}</span></div>`,className:`marker-cluster marker-cluster-${size}`,iconSize:L.point(40,40)});
-  },
-  showCoverageOnHover:false,maxClusterRadius:45
-});
-map.addLayer(clusters);
+  // ===== Cluster group (with custom golf-ball icons) =====
+  const clusters = L.markerClusterGroup({
+    showCoverageOnHover: false,
+    maxClusterRadius: 48,
+    iconCreateFunction: function(cluster) {
+      const count = cluster.getChildCount();
+      let sizeClass = "small";
+      if (count >= 50) sizeClass = "large";
+      else if (count >= 10) sizeClass = "medium";
+      return L.divIcon({
+        html: `<div><span>${count}</span></div>`,
+        className: `marker-cluster marker-cluster-${sizeClass}`,
+        iconSize: L.point(48, 48)
+      });
+    }
+  });
+  map.addLayer(clusters);
 
-// --- Marker icon (green pin + flag) ---
-const pinSvg=encodeURI(`
-<svg xmlns="http://www.w3.org/2000/svg" width="42" height="46" viewBox="0 0 42 46">
-<path d="M21 1c-9.4 0-17 7.6-17 17 0 11 17 27 17 27s17-16 17-27c0-9.4-7.6-17-17-17z" fill="#1f7a3b" stroke="#0e4820" stroke-width="2"/>
-<circle cx="21" cy="18" r="8.5" fill="#e8ffe8" stroke="#0e4820" stroke-width="2"/>
-<rect x="20.3" y="7" width="1.4" height="14" fill="#2b2b2b"/>
-<path d="M21.7 8 L33 12.5 L21.7 17 Z" fill="#c7222a" stroke="#8c141a" stroke-width="1"/>
-</svg>`);
-const courseIcon=L.icon({iconUrl:"data:image/svg+xml;utf8,"+pinSvg,iconSize:[42,46],iconAnchor:[21,42],popupAnchor:[0,-40],tooltipAnchor:[0,-36]});
+  // ===== Marker icon (green teardrop + red flag) =====
+  const pinSvg = encodeURI(`
+    <svg xmlns="http://www.w3.org/2000/svg" width="42" height="46" viewBox="0 0 42 46">
+      <path d="M21 1c-9.4 0-17 7.6-17 17 0 11 17 27 17 27s17-16 17-27c0-9.4-7.6-17-17-17z" fill="#1f7a3b" stroke="#0e4820" stroke-width="2"/>
+      <circle cx="21" cy="18" r="8.5" fill="#e8ffe8" stroke="#0e4820" stroke-width="2"/>
+      <rect x="20.3" y="7" width="1.4" height="14" fill="#2b2b2b"/>
+      <path d="M21.7 8 L33 12.5 L21.7 17 Z" fill="#c7222a" stroke="#8c141a" stroke-width="1"/>
+    </svg>
+  `);
+  const courseIcon = L.icon({
+    iconUrl: "data:image/svg+xml;utf8," + pinSvg,
+    iconSize: [42, 46],
+    iconAnchor: [21, 42],
+    popupAnchor: [0, -40],
+    tooltipAnchor: [0, -36]
+  });
 
-// --- Helpers ---
-const escapeHtml=s=>String(s??"").replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;");
-const toNum=v=>Number.isFinite(+v)?+v:NaN;
-const isTop100=v=>Number.isFinite(+v)&&v>0&&v<=100;
+  // ===== Helpers =====
+  const esc = (s) => String(s ?? "").replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;");
+  const toNum = (v) => {
+    const n = parseFloat(v);
+    return Number.isFinite(n) ? n : NaN;
+  };
+  const isTop100 = (v) => {
+    const n = Number(String(v ?? "").trim());
+    return Number.isFinite(n) && n >= 1 && n <= 100;
+  };
 
-function buildBadge(rank){return `<div class="badge-top100"><span class="label">Top&nbsp;100</span><span class="rank">#${rank}</span></div>`;}
+  function badge(rank) {
+    return `
+      <div class="badge-top100" title="Golf Digest Top 100">
+        <span class="label">Top&nbsp;100</span>
+        <span class="rank">#${rank}</span>
+      </div>
+    `;
+  }
 
-function popupHtml(r){
- const name=escapeHtml(r["course_name"]);
- const resort=escapeHtml(r["course_resort"]);
- const fees=escapeHtml(r["cost_per_course(green_fee_range)"]);
- const property=escapeHtml(r["#_of_courses_on_property"]);
- const lodging=escapeHtml(r["lodging_on-site(yes_no)"]);
- const rank=r["top_100_ranking"];
- const badge=isTop100(rank)?buildBadge(rank):"";
- return `
- <div class="popup">
-   <div class="header">${badge}<div class="title">${name}</div></div>
-   <div class="meta">${resort?`${resort}<br>`:""}</div>
-   <div class="row">
-     ${fees?`<div class="pill">Fees: ${fees}</div>`:""}
-     ${property?`<div class="pill">${property} Courses</div>`:""}
-   </div>
-   <div class="row">
-     ${lodging?`<div class="pill">Lodging: ${lodging}</div>`:""}
-     ${isTop100(rank)?`<div class="pill">Rank #${rank}</div>`:""}
-   </div>
-   <div class="actions"><a class="btn" href="https://www.google.com/search?q=${encodeURIComponent(name)}+golf" target="_blank">View Course ↗</a></div>
- </div>`;
-}
+  function popupHtml(r) {
+    const name = esc(r["course_name"]);
+    const resort = String(r["course_resort"] ?? "").trim();
+    const fees = esc(r["cost_per_course(green_fee_range)"]);
+    const coursesOnProp = esc(r["#_of_courses_on_property"]);
+    const lodging = esc(r["lodging_on-site(yes_no)"]);
+    const rank = r["top_100_ranking"];
+    const city = esc(r["City"] || r["city"] || "");
+    const state = esc(r["state"] || "");
 
-function makeMarker(r){
- const lat=toNum(r.latitude),lon=toNum(r.longitude);
- if(!Number.isFinite(lat)||!Number.isFinite(lon))return null;
- const m=L.marker([lat,lon],{icon:courseIcon,title:r["course_name"]});
- m.bindTooltip(r["course_name"],{direction:"top",offset:[0,-12],opacity:0.9,className:"ga-tooltip"});
- m.bindPopup(popupHtml(r),{maxWidth:360,minWidth:260});
- return m;
-}
+    const lines = [];
+    // Title
+    lines.push(`<div class="line"><strong>🏌️‍♂️ ${name}</strong></div>`);
+    // Resort (only if present)
+    if (resort) lines.push(`<div class="line muted">🏨 ${esc(resort)}</div>`);
+    // Top 100 (only if valid)
+    if (isTop100(rank)) lines.push(`<div class="line">🏆 Golf Digest Top 100: <strong>#${rank}</strong></div>`);
+    // Fees / Courses on property
+    if (fees) lines.push(`<div class="line">💰 Green Fees: ${fees}</div>`);
+    if (coursesOnProp) lines.push(`<div class="line">⛳ Courses on Property: ${coursesOnProp}</div>`);
+    if (lodging) lines.push(`<div class="line">🛏️ Lodging On-Site: ${lodging}</div>`);
+    // Location
+    const locationBits = [city, state].filter(Boolean).join(", ");
+    if (locationBits) lines.push(`<div class="line">📍 ${locationBits}</div>`);
 
-// --- Load CSV ---
-Papa.parse(CSV_URL,{download:true,header:true,skipEmptyLines:true,
- complete:res=>{
-  const rows=res.data||[];let added=0;const markers=[];
-  rows.forEach(r=>{const m=makeMarker(r);if(m){clusters.addLayer(m);markers.push(m);added++;}});
-  if(markers.length){const g=L.featureGroup(markers);map.fitBounds(g.getBounds().pad(0.08));}
-  console.log(`Loaded ${rows.length} · plotted ${added}`);
- }});
+    // View Course (safe default: Google search)
+    const googleLink = `https://www.google.com/search?q=${encodeURIComponent(name + " golf")}`;
+
+    return `
+      <div class="popup">
+        <div class="header">
+          ${isTop100(rank) ? badge(rank) : ""}
+          <div class="title"></div>
+        </div>
+        ${lines.join("")}
+        <div class="actions">
+          <a class="btn" href="${googleLink}" target="_blank" rel="noopener">View Course ↗</a>
+        </div>
+      </div>
+    `;
+  }
+
+  function makeMarker(row) {
+    const lat = toNum(row.latitude);
+    const lon = toNum(row.longitude);
+    if (!Number.isFinite(lat) || !Number.isFinite(lon)) return null;
+
+    const marker = L.marker([lat, lon], { icon: courseIcon, title: row["course_name"] || "" });
+    marker.bindTooltip(row["course_name"] || "", {
+      direction: "top",
+      offset: [0, -12],
+      opacity: 0.92,
+      className: "ga-tooltip"
+    });
+    marker.bindPopup(popupHtml(row), { maxWidth: 380, minWidth: 260, closeButton: true });
+    marker.on("mouseover", () => marker.setZIndexOffset(1000));
+    marker.on("mouseout",  () => marker.setZIndexOffset(0));
+    return marker;
+  }
+
+  // ===== Load CSV & render =====
+  Papa.parse(CSV_URL, {
+    download: true,
+    header: true,
+    skipEmptyLines: true,
+    complete: (res) => {
+      const rows = res.data || [];
+      const markers = [];
+      rows.forEach((r) => {
+        const m = makeMarker(r);
+        if (m) { clusters.addLayer(m); markers.push(m); }
+      });
+      if (markers.length) {
+        const group = L.featureGroup(markers);
+        map.fitBounds(group.getBounds().pad(0.08), { animate: true });
+      } else {
+        // Fallback view if nothing plotted (helps diagnose)
+        map.setView(START_VIEW.center, START_VIEW.zoom);
+        console.warn("No markers plotted. Check lat/longitude columns and CSV URL.");
+      }
+    },
+    error: (err) => {
+      console.error("CSV load error:", err);
+      alert("Error loading data CSV. Check ?csv= link and that it's published as CSV.");
+    }
+  });
 </script>
 </body>
 </html>
